[gd_scene load_steps=5 format=2]

[ext_resource path="res://Level Items/Tools/Exploit Consoles/Scripts/Console.gd" type="Script" id=1]
[ext_resource path="res://Level Items/Tools/Exploit Consoles/Animation/Console.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Level Items/Tools/Exploit Consoles/Sprites/UI/ProgressGradient.tres" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Console" type="Area2D"]
position = Vector2( 0, 24 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.7 )
shape = SubResource( 1 )

[node name="Visual" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "Inactive"
playing = true

[node name="Activate" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Deactivate" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = 6.0
margin_top = 8.0
margin_right = 16.0
margin_bottom = 11.0
rect_rotation = -90.0
mouse_filter = 2
step = 0.01
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
[connection signal="area_entered" from="." to="." method="OnAreaEnter"]
[connection signal="area_exited" from="." to="." method="OnAreaExit"]
[connection signal="timeout" from="Activate" to="." method="OnActivate"]
[connection signal="timeout" from="Deactivate" to="." method="OnDeactivate"]
