extends Area2D

var active = false
var activating = false
var used = false

func activate():
	$Visual.animation = "Activating"
	$TextureProgress.visible = true
	activating = true
	$Activate.start()
	
func deactivate():
	active = false
	activating = false
	$Activate.stop()
	$Visual.animation = "Inactive"
	$TextureProgress.visible = false
	activating = false
		

func OnActivate():
	$Visual.animation = "Active"
	active = true
	get_parent().get_node("Enemies").hack()
	$Deactivate.start()


func OnDeactivate():
	active = false
	used = true
	activating = false
	$TextureProgress.visible = false
	get_parent().get_node("Enemies").disable_hack()

func _process(delta):
	if used == true:
		$Visual.animation = "Used"
	elif active == true:
		$Visual.animation = "Active"
	if activating == true:
		if active == true:
			$TextureProgress.value -= 100 / (10 * (1 / delta))
		else:
			$TextureProgress.value += 100 / (5 * (1 / delta))

func OnAreaEnter(area):
	if area.get_parent().name == "Player":
		if used != true:
			activate()
			


func OnAreaExit(area):
	if area.get_parent().name == "Player":
		if active != true:
			deactivate()
